@@ -240,6 +240,13 @@ ifeq ($(HOST_OS),darwin)
 # Mac OS X :
 NASMFLAGS=-f macho
 CPUFLAGS=
+# require 10.5 for 64 bit builds
+ifeq ($(MACH_TYPE),x86_64)
+CPUFLAGS+=-mmacosx-version-min=10.5
+endif
+ifeq ($(MACH_TYPE),ppc64)
+CPUFLAGS+=-mmacosx-version-min=10.5
+endif
 
 # no need for timidity, we have a midi driver
 USE_CODEC_TIMIDITY=no
